--- a/Client/LogisticsPlatform/res/layout/activity_main.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         <FrameLayout
             android:id="@android:id/tabcontent"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="0dip"
             android:layout_weight="1" />
 
         <TabWidget
