--- a/Client/LogisticsPlatform/res/layout/activity_profile_change_password.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_profile_change_password.xml
@@ -29,7 +29,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:contentDescription="@string/content_description"
         android:src="@drawable/map_clock"
         android:layout_marginBottom="@dimen/world_bottom_padding"
         android:layout_alignParentBottom="true"
@@ -41,14 +40,44 @@
         android:layout_height="wrap_content"
         android:background="@drawable/title_tool_bar_title"
         >
-         
+         <Button
+            android:id="@+id/return_btn"
+            android:layout_width="50dip"
+            android:layout_height="30dip"
+            android:text="@string/returns"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dip"
+            android:background="@drawable/ic_button_1"
+            style="@style/button_style"
+            />
+
+            <!-- <Button
+            android:id="@+id/edit_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/edit"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dip"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/ic_button_3"
+            /> -->
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                 android:text="@string/profile_title"
+                 android:text="@string/change_password"
                 style="@style/titleTextStyle"
                 />
-       
+        <Button
+            android:id="@+id/add_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textColor="@android:color/white"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dip"
+            android:background="@drawable/ic_button_add"
+            />
     </RelativeLayout>
 
     <ScrollView
@@ -59,8 +88,10 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:orientation="vertical">
-        	<TableLayout
+             android:orientation="vertical"
+            >
+            
+           <TableLayout
                     android:id="@+id/profile_top"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -72,13 +103,16 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/usr_name"
+                            android:text="@string/old_password"
                             android:textSize="20sp" />
 
-                        <TextView
-                            android:id="@+id/usr_name"
+                        <EditText
+                            android:id="@+id/old_password"
                             android:layout_width="150dp"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:inputType="textWebPassword" />
+
                 </TableRow>
                 
             	<TableRow android:layout_width="match_parent" >
@@ -86,13 +120,15 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/phone"
+                            android:text="@string/new_password"
                             android:textSize="20sp" />
 
-                        <TextView
-                            android:id="@+id/phone"
+                        <EditText
+                            android:id="@+id/new_password"
                             android:layout_width="150dp"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:inputType="textWebPassword"/>
                 </TableRow>
                 
             	<TableRow android:layout_width="match_parent" >
@@ -100,53 +136,31 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/role_id"
+                            android:text="@string/confirm"
                             android:textSize="20sp" />
 
-                        <TextView
-                            android:id="@+id/role_id"
+                        <EditText
+                            android:id="@+id/confirm"
                             android:layout_width="150dp"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:ems="10"
+                            android:inputType="textWebPassword" />
                 </TableRow>
             	
-            	<TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/seperator"
-                            android:textSize="20sp" />
-            	
+            	            	
             	<Button
-            	    		android:id="@+id/cur_deal"
+            	    		android:id="@+id/submit"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/cur_deal"
-                            android:textSize="20sp" />
-            	<Button
-            	    		android:id="@+id/his_deal"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/his_deal"
-                            android:textSize="20sp" />
-            	<TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/seperator"
-                            android:textSize="20sp" />
-            	<Button
-            	    		android:id="@+id/change_password"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/change_password"
-                            android:textSize="20sp" />
-            	<Button
-            	    		android:id="@+id/change_phone"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/change_phone"
+                            android:text="@string/submit"
+                            android:layout_height="0dip"
+                    		android:layout_gravity="center_horizontal"
+                    		android:layout_weight="1"
                             android:textSize="20sp" />
             	
             	
         	</TableLayout>
+            
+                
         </LinearLayout>
     </ScrollView>
 
