--- a/Client/LogisticsPlatform/res/layout/activity_profile_history_deal.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_profile_history_deal.xml
@@ -41,7 +41,7 @@
         android:background="@drawable/title_tool_bar_title"
         >
          <Button
-            android:id="@+id/edit_btn"
+            android:id="@+id/return_btn"
             android:layout_width="50dip"
             android:layout_height="30dip"
             android:text="@string/returns"
@@ -80,19 +80,32 @@
             />
     </RelativeLayout>
 
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/title_layout"
-        >
+    
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:layout_below="@+id/title_layout"
              android:orientation="vertical"
             >
+        	<TextView
+				android:id="@+id/history_deal"
+				android:text="@string/history_deal"
+				android:layout_width="fill_parent"
+				android:layout_height="30dip"/>
+			<ListView
+				android:id="@+id/list_historydeal"
+				android:layout_width="fill_parent" 
+				android:layout_height="fill_parent"
+				android:drawSelectorOnTop="false"
+				/>
+			<TextView android:id="@android:id/empty"
+              	 	android:layout_width="match_parent"
+              		android:layout_height="match_parent"
+               		android:background="#FF0000"
+               		android:text="@string/no_data"/>
                 
         </LinearLayout>
-    </ScrollView>
+    
 
         <ImageView
             android:layout_width="fill_parent"
