--- a/Client/LogisticsPlatform/res/layout/activity_profile_current_deal.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_profile_current_deal.xml
@@ -31,6 +31,7 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/map_clock"
         android:layout_marginBottom="@dimen/world_bottom_padding"
+        android:contentDescription="@string/content_description"
         android:layout_alignParentBottom="true"
         />
 
@@ -41,7 +42,7 @@
         android:background="@drawable/title_tool_bar_title"
         >
          <Button
-            android:id="@+id/edit_btn"
+            android:id="@+id/return_btn"
             android:layout_width="50dip"
             android:layout_height="30dip"
             android:text="@string/returns"
@@ -80,24 +81,37 @@
             />
     </RelativeLayout>
 
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/title_layout"
-        >
+    
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:layout_below="@+id/title_layout"
              android:orientation="vertical"
             >
-                
+                <TextView
+				android:id="@+id/current_deal"
+				android:text="@string/current_deal"
+				android:layout_width="fill_parent"
+				android:layout_height="30dip"/>
+				<ListView
+				android:id="@+id/list_currentdeal"
+				android:layout_width="fill_parent" 
+				android:layout_height="fill_parent"
+				android:drawSelectorOnTop="false"
+				/>
+				<TextView android:id="@android:id/empty"
+              	 	android:layout_width="match_parent"
+              		android:layout_height="match_parent"
+               		android:background="#FF0000"
+               		android:text="@string/no_data"/>
         </LinearLayout>
-    </ScrollView>
+    
 
-        <ImageView
+        <!--  <ImageView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@drawable/bg_shadow_clock"
-            />
+             android:contentDescription="@string/content_description"
+            />-->
 </RelativeLayout>
