--- a/Client/LogisticsPlatform/res/values/attrs.xml
+++ b/Client/LogisticsPlatform/res/values/attrs.xml
@@ -21,4 +21,8 @@
     <declare-styleable name="CompoundButton">
         <attr name="android:button" />
     </declare-styleable>
+    <declare-styleable name="PullActivateLayout">
+        <attr name="actionViewId" format="reference" />
+        <attr name="toolViewId" format="reference" />
+    </declare-styleable>
 </resources>
