--- a/Client/LogisticsPlatform/res/layout/activity_settings.xml
+++ b/Client/LogisticsPlatform/res/layout/activity_settings.xml
@@ -17,71 +17,49 @@
 */
 -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:logistics="http://schemas.android.com/apk/res/com.logistics"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="center_horizontal"
-    android:background="@drawable/add_alarm_bg"
+    android:gravity="center_horizontal"     
     >
-
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/map_clock"
-        android:layout_marginBottom="@dimen/world_bottom_padding"
-        android:layout_alignParentBottom="true"
-        />
-
-    <RelativeLayout
-        android:id="@+id/title_layout"
-        android:layout_width="fill_parent"
+	
+    <TextView
+        style="@style/titleTextStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/title_tool_bar_title"
-        >
-        
-            <!-- <Button
-            android:id="@+id/edit_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/edit"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dip"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/ic_button_3"
-            /> -->
+        android:text="@string/map_title" />
+    
+    <LinearLayout android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:gravity="center_horizontal">
+           
+	<com.logistics.utils.PullRefreshLayout
+        android:id="@+id/pull_container"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/add_alarm_bg"
+        logistics:actionViewId="@+id/action_view"
+        logistics:toolViewId="@+id/tool_view"
+        android:scrollbars="vertical"
+        >       
+       
+        <include
+            android:id="@+id/action_view"
+            layout="@layout/refresh_layout" />
+        <include
+            android:id="@+id/tool_view"
+            layout="@layout/tool_layout" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                 android:text="@string/settings_title"
-                style="@style/titleTextStyle"
-                />
-        
-    </RelativeLayout>
-
-    <LinearLayout
-		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"
-		    android:layout_below="@+id/title_layout"
-		    android:orientation="vertical" >
-
-			<TextView
-				android:id="@+id/result_show"
-				android:text="@string/result_show"
-				android:layout_width="fill_parent"
-				android:layout_height="30dip"/>
-			<ListView
-				android:id="@+id/list_goodresult"
-				android:layout_width="fill_parent" 
-				android:layout_height="fill_parent"
-				android:drawSelectorOnTop="false"
-				/>
-			<TextView android:id="@android:id/empty"
-              	 	android:layout_width="match_parent"
-              		android:layout_height="match_parent"
-               		android:background="#FF0000"
-               		android:text="@string/no_data"/>
-		</LinearLayout>
-</RelativeLayout>
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
+                
+    </com.logistics.utils.PullRefreshLayout>
+    </LinearLayout>
+    
+    
+</LinearLayout>
