--- a/Client/Logistics/res/layout/activity_map.xml
+++ b/Client/Logistics/res/layout/activity_map.xml
@@ -2,14 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" android:background="#f0f0f0">
+    android:orientation="vertical" 
+    android:background="@drawable/add_alarm_bg">
 
-    
+    <RelativeLayout
+        android:id="@+id/title_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/title_tool_bar_title"
+        >
+         
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                 android:text="@string/map_title"
+                style="@style/titleTextStyle"
+                />
+       
+    </RelativeLayout>
 
     <me.maxwin.view.XListView
         android:id="@+id/xListView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" android:cacheColorHint="#00000000">
+        android:layout_height="fill_parent" 
+        android:cacheColorHint="#00000000">
     </me.maxwin.view.XListView>
 
 </LinearLayout>
