--- a/Client/Logistics/res/layout/activity_good.xml
+++ b/Client/Logistics/res/layout/activity_good.xml
@@ -165,6 +165,16 @@
                     android:text="@string/search"
                     android:textSize="20sp" >
                 </Button>
+
+                <ProgressBar
+                    android:id="@+id/http_progress"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="0.21"
+                    android:visibility="gone" />
+
             </LinearLayout>
         
         
