--- a/Client/Logistics/res/layout/activity_good_result_detail.xml
+++ b/Client/Logistics/res/layout/activity_good_result_detail.xml
@@ -102,8 +102,9 @@
                 android:textSize="20sp" />
             <TextView
 				android:id="@+id/goods_detail_info"
-				android:layout_width="wrap_content"
-				android:layout_height="30dip"/> 
+				android:layout_width="fill_parent"
+				android:layout_height="110dp"
+				android:textSize="20sp"/> 
 				
             <TextView
                 android:layout_width="wrap_content"
@@ -113,8 +114,9 @@
             
             <TextView
 				android:id="@+id/source_detail_info"
-				android:layout_width="wrap_content"
-				android:layout_height="30dip"/> 
+				android:layout_width="fill_parent"
+				android:layout_height="110dp"
+				android:textSize="20sp"/> 
 				
             <Button
             	android:id="@+id/submit_order"
