--- a/Client/Logistics/res/layout/activity_login_detail.xml
+++ b/Client/Logistics/res/layout/activity_login_detail.xml
@@ -67,7 +67,7 @@
                 </TableRow>
                 
             	<TableRow android:layout_width="match_parent" 
-            	    android:layout_marginTop="45dp">
+            	    android:layout_marginTop="40dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -84,6 +84,15 @@
                 </TableRow>
      </TableLayout>
     
+	<CheckBox
+         android:id="@+id/rememberpassword"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginLeft="15dp"
+         android:layout_centerVertical="true"
+         android:checked="false"
+         android:text="@string/rememberpassword"
+         android:layout_marginTop="5dp" />
     
      <Button
          android:id="@+id/login"
@@ -115,5 +124,6 @@
 	     android:textColor="@android:color/white"
 	     android:text="@string/forget" />
 
+     
 
 </RelativeLayout>
